--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proton-quark-controllers",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash": "^4.0.0",
     "proton-quark": "^1.0.0",
-    "require-all": "^2.0.0"
+    "require-all": "^2.0.0",
+    "proton-controller": "1.0.0"
   }
 }
